Class method has been added

--- a/Desktop/MyProject/Eclipse Project/testProject1/src/classes/recordOwnerImage.cls
+++ b/Desktop/MyProject/Eclipse Project/testProject1/src/classes/recordOwnerImage.cls
@@ -1,3 +1,8 @@
 public class recordOwnerImage {
 	//Lightning Component method start here
+	 @AuraEnabled 
+    public static user fetchUserImage(Id recordOwnerId){
+        system.debug('recordOwnerId----'+recordOwnerId);
+        return [Select id,createdById,Name,SmallPhotoUrl From User Where Id =: recordOwnerId];
+    }
 }
